WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193385
[LFC] Adjust assert for statically positioned fixed elements
https://bugs.webkit.org/show_bug.cgi?id=193385
Summary
[LFC] Adjust assert for statically positioned fixed elements
alan
Reported
2019-01-12 21:57:35 PST
While computing the static position and traversing the ancestor chain, we can surely hit a positioned container (since we need to go all the way up to the initial containing block)
Attachments
Patch
(4.78 KB, patch)
2019-01-12 22:00 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-12 22:00:46 PST
Created
attachment 359001
[details]
Patch
WebKit Commit Bot
Comment 2
2019-01-13 08:39:42 PST
Comment on
attachment 359001
[details]
Patch Clearing flags on attachment: 359001 Committed
r239907
: <
https://trac.webkit.org/changeset/239907
>
WebKit Commit Bot
Comment 3
2019-01-13 08:39:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-01-13 08:40:28 PST
<
rdar://problem/47238602
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug