[LFC] Adjust assert for statically positioned fixed elements https://bugs.webkit.org/show_bug.cgi?id=193385

Reviewed by Antti Koivisto.

Source/WebCore:

While computing the static position and traversing the ancestor chain, we can surely hit a positioned container
(since we need to go all the way up to the initial containing block).

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::staticVerticalPositionForOutOfFlowPositioned):
(WebCore::Layout::staticHorizontalPositionForOutOfFlowPositioned):

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:


Canonical link: https://commits.webkit.org/207888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239907 268f45cc-cd09-0410-ab3c-d52691b4dbfc